# testing_neutralino_rust_v2

./: .env  Cargo.toml  build.js  test.json
front/: config.html  core.js  index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
myapp/: neutralino.config.json
myapp/.tmp/: auth_info.json  neutralino.config.json
myapp/.tmp/resources/: core.js
myapp/resources/: core.js  index.html
src/: basic_message.rs  electron.rs  init_message.rs  lib.rs  main.rs  message_handler.rs  message_kind.rs  pingpong.rs  screenshot.rs  stopsignal.rs  tcp_listener.rs
templates/: test.txt
